# rvr-loop-functions

./: .gitignore  README.md
loop-functions/: CMakeLists.txt
loop-functions/big-arena/: BigForagingTwoSpotsLoopFunc.cpp  BigForagingTwoSpotsLoopFunc.h  BigGridExplorationLoopFunc.cpp  BigGridExplorationLoopFunc.h  CMakeLists.txt  ChocolateBigAACLoopFunc.cpp  ChocolateBigAACLoopFunc.h
loop-functions/rvr-pow/: CMakeLists.txt
loop-functions/rvr-pow/grid-exploration/: GridExplorationLoopFunc.cpp  GridExplorationLoopFunc.h
loop-functions/vanilla/: AggregationTwoSpotsLoopFunc.cpp  AggregationTwoSpotsLoopFunc.h  ForagingTwoSpotsLoopFunc.cpp  ForagingTwoSpotsLoopFunc.h
src/: CMakeLists.txt  RVRCoreLoopFunctions.cpp  RVRCoreLoopFunctions.h
